--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
         </div>
       </div>
     </div>
+
+    <div class="header__search">
+      <div class="header__searchcategory">
+        <span></span>
+      </div>
+    </div>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
