[feat] : html 쿠팡로고, 검색창

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
       <div class="header__searchcategory">
         <span></span>
       </div>
+      <div class="header__searchbar">
+        <div>
+          <img
+            src="https://image7.coupangcdn.com/image/coupang/common/logo_coupang_w350.png"
+            width="174"
+            height="41"
+            alt="쿠팡로고"
+          />
+        </div>
+        <div class="header__category">
+          <div class="header__choosecategory">
+            <span class="header__categorytitle">전체</span>
+            <span class="check"></span>
+          </div>
+          <div class="header__searchkeyword">
+            <input type="text" placeholder="찾고 싶은 상품을 검색해보세요!" />
+            <span></span>
+          </div>
+        </div>
+      </div>
     </div>
     <script type="module" src="script.js"></script>
   </body>
