[feat] : html 검색창 아래 서브 메뉴

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
             <span></span>
           </div>
         </div>
+        <div class="header__submenu">
+          <ul>
+            <li>로켓배송</li>
+            <li>로켓프레시</li>
+            <li>biz쿠팡비즈</li>
+            <li>로켓직구</li>
+            <li>골드박스</li>
+            <li>와우회원할인</li>
+            <li>이벤트/쿠폰</li>
+            <li>기획전</li>
+            <li>이벤트/티켓</li>
+          </ul>
+        </div>
       </div>
     </div>
     <script type="module" src="script.js"></script>
