[feat] : html 마이쿠팡, 장바구니

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
           </ul>
         </div>
       </div>
+      <div class="header__info">
+        <div class="header__mycoupang">
+          <p class="header__mycoupang-icon"></p>
+          <p>마이쿠팡</p>
+        </div>
+        <div class="header__shopping">
+          <p class="header__shopping-icon"></p>
+          <p>장바구니</p>
+        </div>
+      </div>
     </div>
     <script type="module" src="script.js"></script>
   </body>
