[feat] : html 메인베너 넣기

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         </div>
       </div>
     </div>
+    <div class="main__banner">
+      <div></div>
+    </div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
