[feat] : html 베너 오른쪽 콘텐츠 배치

--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
       </div>
     </div>
     <div class="main__banner">
-      <div></div>
+      <div>
+        <ul>
+          <li class="active"><span>쿠팡비즈</span></li>
+          <li><span>피앤지 봄맞이 생필품</span></li>
+          <li><span>수입식품관</span></li>
+          <li><span>폴메디슨트리트룸 무로 외</span></li>
+          <li><span>주방BEST</span></li>
+          <li><span>브랜드위크</span></li>
+        </ul>
+      </div>
     </div>
     <script type="module" src="script.js"></script>
   </body>
