Feat: Add top bar above header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="style.css" rel="stylesheet" />
-        <title>쿠팡!</title>
-    </head>
-    <body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./public/stylesheet/css/style.css" rel="stylesheet" />
+    <title>쿠팡!</title>
+  </head>
+  <body>
+    <header>
+      <section class="top-bar__background">
+        <div class="top-bar__container">
+          <div class="top-bar__col">
+            <li class="btn"><a href="#">즐겨찾기</a></li>
+            <li class="btn">
+              <a href="#">입점신청 <i class="fa-solid fa-caret-down"></i></a>
+            </li>
+          </div>
+          <div class="top-bar__col">
+            <li class="btn"><a href="#">로그인</a></li>
+            <li class="btn"><a href="#">회원가입</a></li>
+            <li class="btn"><a href="#">고객센터</a></li>
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="header">
+        <div class="header__wrapper">
+          <span>카테고리</span>
+        </div>
+
+        <div class="header__wrapper">
+          <div class="header-main">
+            <div class="header-main__logo"></div>
+            <div class="header-main__search"></div>
+          </div>
+
+          <div class="header__gnb">
+            <ul class="gnb-menu">
+              <li class="rocket-delivery"><a href="#">로켓배송</a></li>
+              <li class="rocket-fresh"><a href="#">로켓프레시</a><span class="new-badge"></span></li>
+              <li class="coupang-biz"><a href="#">쿠팡비즈</a><span class="new-badge"></span></li>
+              <li class="coupang-global"><a href="#">로켓직구</a></li>
+              <li><a href="#">골드박스</a></li>
+              <li><a href="#">와우회원할인</a></li>
+              <li><a href="#">이벤트/쿠폰</a></li>
+              <li><a href="#">기획전</a></li>
+              <li><a href="#">여행/티켓</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="header__wrapper">
+          <div>
+            <span class="my-coupang-icon">
+            <span class="my-coupang-title">마이쿠팡</span>
+          </div>
+          <div>
+            <span class="cart-icon"></span>
+            <span class="cart-title">장바구니</span>
+          </div>
+        </div>
+      </section> -->
+    </header>
+    <script src="https://kit.fontawesome.com/85a7925297.js" crossorigin="anonymous"></script>
+  </body>
 </html>
