Refactor: Delete a tag on menu list

--- a/index.html
+++ b/index.html
@@ -49,37 +49,37 @@
 
               <div class="search__category-list hidden">
                 <ul class="category__items">
-                  <li class="category__item"><a href="#"> 전체</a></li>
-                  <li class="category__item"><a href="#"> 여성패션</a></li>
-                  <li class="category__item"><a href="#"> 남성패션</a></li>
-                  <li class="category__item"><a href="#"> 남녀 공용 의류</a></li>
-                  <li class="category__item"><a href="#"> 유아동패션</a></li>
-                  <li class="category__item"><a href="#"> 뷰티</a></li>
-                  <li class="category__item"><a href="#"> 출산/유아동</a></li>
-                  <li class="category__item"><a href="#"> 식품</a></li>
-                  <li class="category__item"><a href="#"> 주방용품</a></li>
-                  <li class="category__item"><a href="#"> 생활용품</a></li>
-                  <li class="category__item"><a href="#"> 홈인테리어</a></li>
-                  <li class="category__item"><a href="#"> 가전디지털</a></li>
-                  <li class="category__item"><a href="#"> 스포츠/레저</a></li>
-                  <li class="category__item"><a href="#"> 자동차용품</a></li>
-                  <li class="category__item"><a href="#"> 도서/음반/DVD</a></li>
-                  <li class="category__item"><a href="#"> 완구/취미</a></li>
-                  <li class="category__item"><a href="#"> 문구/오피스</a></li>
-                  <li class="category__item"><a href="#"> 반려동물물품</a></li>
-                  <li class="category__item"><a href="#"> 헬스/건강식품</a></li>
-                  <li class="category__item"><a href="#"> 국내여행</a></li>
-                  <li class="category__item"><a href="#"> 해외여행</a></li>
-                  <li class="category__item"><a href="#"> 로켓설치</a></li>
-                  <li class="category__item"><a href="#"> 공간별 집꾸미기</a></li>
-                  <li class="category__item"><a href="#"> 헬스케어 전문관</a></li>
-                  <li class="category__item"><a href="#"> 쿠팡 Only</a></li>
-                  <li class="category__item"><a href="#"> 싱글라이프</a></li>
-                  <li class="category__item"><a href="#"> 악기전문관</a></li>
-                  <li class="category__item"><a href="#"> 결혼준비</a></li>
-                  <li class="category__item"><a href="#"> 아트/공예</a></li>
-                  <li class="category__item"><a href="#"> 홈카페</a></li>
-                  <li class="category__item"><a href="#"> 실버스토어</a></li>
+                  <li class="category__item">전체</li>
+                  <li class="category__item">여성패션</li>
+                  <li class="category__item">남성패션</li>
+                  <li class="category__item">남녀 공용 의류</li>
+                  <li class="category__item">유아동패션</li>
+                  <li class="category__item">뷰티</li>
+                  <li class="category__item">출산/유아동</li>
+                  <li class="category__item">식품</li>
+                  <li class="category__item">주방용품</li>
+                  <li class="category__item">생활용품</li>
+                  <li class="category__item">홈인테리어</li>
+                  <li class="category__item">가전디지털</li>
+                  <li class="category__item">스포츠/레저</li>
+                  <li class="category__item">자동차용품</li>
+                  <li class="category__item">도서/음반/DVD</li>
+                  <li class="category__item">완구/취미</li>
+                  <li class="category__item">문구/오피스</li>
+                  <li class="category__item">반려동물물품</li>
+                  <li class="category__item">헬스/건강식품</li>
+                  <li class="category__item">국내여행</li>
+                  <li class="category__item">해외여행</li>
+                  <li class="category__item">로켓설치</li>
+                  <li class="category__item">공간별 집꾸미기</li>
+                  <li class="category__item">헬스케어 전문관</li>
+                  <li class="category__item">쿠팡 Only</li>
+                  <li class="category__item">싱글라이프</li>
+                  <li class="category__item">악기전문관</li>
+                  <li class="category__item">결혼준비</li>
+                  <li class="category__item">아트/공예</li>
+                  <li class="category__item">홈카페</li>
+                  <li class="category__item">실버스토어</li>
                 </ul>
               </div>
               <div class="search__input">
