--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <header>
+      <section class="top-add">
+        <img src="https://static.coupangcdn.com/ea/cmg_paperboy/image/1646271114206/C0-Left_basic.jpg" />
+        <img src="https://static.coupangcdn.com/la/cmg_paperboy/image/1647481105255/0320_C0.png" />
+        <i class="fa-thin fa-x top-add__btn"></i>
+      </section>
       <section class="top-bar__background">
         <div class="top-bar__container">
           <div class="top-bar__col">
